--- a/QUIZ 4/index.html
+++ b/QUIZ 4/index.html
@@ -22,35 +22,42 @@
 </header>
 
 <div class="main-content">
+<div class="content">
 <img src="img/grass.jpg">
+
 
 
 <h1>MY RANDOM AKIRA</h1>
 <h2>THE BEST WAY TO SKIN A CAT</h2>
-<div class="paragraph">
 <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum..
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</P>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum..
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum..
-</P>
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
+<div class="classic">
 <img src="img/sheep.jfif" width=332 height=267>
+</div>
+<div class="irene2 classic">
 <img src="img/sheep.jfif" width=332 height=267>
+</div>
+<div class="irene3 classic">
 <img src="img/sonicadventure.jfif" width=332 height=267>
+</div>
+
 
 </div>
 
