--- a/QUIZ 1/index.html
+++ b/QUIZ 1/index.html
@@ -26,7 +26,8 @@
 </ol>
 <div class="games">
 <p>My first paragraph.<p>
-<p><a href="about.html">about</a> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+<p><a href="about.html">about</a>
+ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
